swaaeer add account endpoints
